src/index.css
@import "tailwindcss" prefix(tw);
@import "tailwind-scrollbar-hide/v4";
@import "tw-animate-css";
@plugin "@tailwindcss/forms";

@utility container {
  margin-inline: auto;
  padding-inline: 2rem;
  max-width: 1260px;
}

:root {
  --primary-color: #50add8;
  --dark-purple-color: #000057;
  --light-purple-color: #9999c5;
  --secondary-color: #a5a2ad;
  --muted-color: #dbdade;
}

@theme inline {
  --color-primary: var(--primary-color);
  --color-dark-purple: var(--dark-purple-color);
  --color-light-purple: var(--light-purple-color);
  --color-secondary: var(--secondary-color);
  --color-muted: var(--muted-color);

  --animate-progress: progress 4s linear infinite;
  --animate-collapsible-expand: collapsible-expand 0.2s ease-out;
  --animate-collapsible-collapse: collapsible-collapse 0.2s ease-out;

  @keyframes progress {
    0% {
      transform: translateX(0) scaleX(0);
    }
    40% {
      transform: translateX(0) scaleX(0.4);
    }
    100% {
      transform: translateX(100%) scaleX(0.5);
    }
  }

  @keyframes collapsible-expand {
    from {
      height: 0px;
    }
    to {
      height: var(--radix-collapsible-content-height);
    }
  }
  @keyframes collapsible-collapse {
    from {
      height: var(--radix-collapsible-content-height);
    }
    to {
      height: 0px;
    }
  }
}

@font-face {
  font-family: "Rubik";
  src: url("../src/assets/font/Rubik-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

/* width */
::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #50add8;
}

.Login-form-box::-webkit-scrollbar {
  width: 0px;
  height: 0px;
}

.side-bar-container-thiviyo::-webkit-scrollbar {
  width: 0px;
  height: 0px;
}

h1,
h2,
h3,
h4,
p {
  margin: 0px;
}

.top-margin {
  @apply tw:mt-16 tw:md:mt-[92px];
}

/* Header________Styling________Css */
/* Header________Styling________Css */
/* Header________Styling________Css */

/* Input */
.input {
  @apply tw:border-muted tw:transition-all tw:focus:ring-2 tw:focus:ring-dark-purple tw:focus:border-transparent tw:!rounded;
}

/* Top Bar */
.top-bar {
  width: 100%;
  height: 48px;
  background: #353978;
  color: black;
  display: flex;
  align-items: center;
}

.top-bar-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.top-bar-social-links {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.top-bar-mail {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  text-decoration: none;
}
.top-bar-mail:hover {
  text-decoration: none;
}

.top-bar-mail img {
  width: 16px;
  height: 16px;
}

.top-bar-mail p {
  color: #fff;
}

.top-bar-social-links a {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* header {
  width: 100%;
  position: relative;
  padding: 20px 0px;
} */

.container {
  width: 100%;
  max-width: 1320px;
  margin: 0 auto;
}

nav.nav-1 {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 92px;
  padding: 16px 0;
}

.nav-logo {
  width: 195px;
  cursor: pointer;
}

.nav-logo img {
  width: 100%;
}

.nav-box {
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 24px;
}

.nav-btn-box {
  display: flex;
  align-items: center;
  gap: 10px;
  cursor: pointer;
}

.nav-btn-box svg {
  width: 25px;
  height: 25px;
}

.nav-btn-box p {
  color: #272727;
  font-family: "Rubik";
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.nav-login-btn {
  background: #50add8;
  border-radius: 6px;
  height: 38px;
  padding: 20px;
  border: none;
  font-weight: 500;
  color: white;
  text-align: center;
  border: 1px solid #ccc inset;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
}

.nav-login-btn:hover {
  opacity: 0.95;
}

/* Header________Styling________Css */
/* Header________Styling________Css */
/* Header________Styling________Css */

/* Hero________Styling________Css */
/* Hero________Styling________Css */
/* Hero________Styling________Css */

button.swich {
  position: absolute;
  right: -32px;
  background: #fff;
  filter: drop-shadow(0px 3px 9px rgba(0, 0, 0, 0.1));
  border: 1px solid #dbdbdb;
  border-radius: 50px;
  padding: 10px;
  top: 5px;
  z-index: 2;
  cursor: pointer;
  display: flex;
  align-items: center;
}

button.swich svg {
  width: 14px;
  height: 14px;
}

.BookTicket-box .select-station-drop {
  width: 100%;
  border-radius: 5px;
  border: 1px solid #858383;
  padding: 15px 20px;
}

.BookTicket-box {
  width: 100%;
  position: relative;
  padding-top: 20px;
}

.BookTicket-box .dropdwon-1-list {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: #939393;
  font-family: Rubik;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.BookTicket-box ul.options-list {
  top: 100%;
  width: 100%;
  padding: 20px;
  position: absolute;
  background-color: #ffff;
  right: 0px;
  border-radius: 0px 0px 10px 10px;
  border: 1.202px solid rgba(39, 39, 39, 0.1);
  background: #fff;
  box-shadow: 12.022px 16.831px 76.942px -12.022px rgba(0, 0, 0, 0.05);
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 10px;
}

.BookTicket-box ul.options-list li {
  font-family: "Rubik";
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  cursor: pointer;
  list-style: none;
}

section.hero-sec {
  width: 100%;
  background-image: url(../src/assets/Images/hero_bg.png);
  padding: 60px 0;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

section.hero-sec.HeroHotels-sec {
  background-image: url(../src/assets/Images/HeroHotels.png);
}

section.CarHero-sec {
  background-image: url(../src/assets/Images/CarHerosec.png);
}

.main-hero {
  width: 100%;
}

.hero-tital {
  width: 100%;
}
/* ... */

